Agregando barra de navegación y menú

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
     	<meta charset="UTF-8">
-    	<title>Applove</title>
+		<title>Applove</title>
+		<link rel="stylesheet" href="./css/common.css">
+		<link rel="stylesheet" href="./css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     	<!-- Importa la fuente del proyecto (Raleway) de Google Fonts (https://fonts.google.com) -->
 
     	<!-- Enlaza tu CSS reutilizable aquí (common.css) -->
@@ -11,6 +14,16 @@
 
     </head>
     <body>
+		<header class="text-uppercase">
+			<nav>
+				<a href="#" class="link">Services</a>
+				<a href="#" class="link">Work</a>
+				<a href="#" class="link">The team</a>
+			<figure class="logo">
+				<img src="assets/images/logo.png" alt="">
+			</figure>
+			</nav>
+		</header>
     	<!-- Escribe el HTML aquí -->
 
     	<!-- Enlaza tu JS aquí -->
